2003-11-18  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Mark the version as  2.99.56  (finally!)

2003-11-16  Matti Aarnio  <mea@zmailer.org>

	* proto/cf/aliases.cf:
	    More patches from Eugene Crosser (actually something
	    I omitted by accident when applying things manually;
	    as in "retyping" ..)

	* smtpserver/policytest.c:
	    Moved target specific rejects early -- so that we can
	    reject some targets even for cases where e.g. message
	    source IP address carries "relay all thru us".

	* transports/smtp/smtp.c:
	    More of wrong return code hunting.
	    It turns out, that reopening has been done without
	    resetting MX index, and that omission caused in some
	    case at some targets the reopen to fail with fatal
	    error code.

2003-11-07  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Tracked connection restart problems, specifically against
	    HOTMAIL, which runs things in highly questionable manner,
	    but that may happen with other systems, too.
	    (Apparently HM hangs up the inbound smtp connection
	    right after receiving end of previous message.)

	* compat/sendmail/sendmail.c, smtpserver/smtpserver.h,
	  smtpserver/smtpserver.c, smtpserver/smtpcmds.c:
	    - When 'sendmail' is called with '-bs' option, let it
	      call the subsequently started  smtpserver as:
	      "sendmail-smtp-in".
	    - Don't call policy database functions, when the program
	      isn't being run under a network socket.

2003-11-07  Eugene Crosser  <crosser@rol.ru>
             
	* proto/cf/aliases.cf:
	     Define "sysuser" variable that is either "user" or
	     "user@domain". Use this as argument to 'homedirectory' and
	     'login2uid' functions that ultimately call getpwnam()

	* proto/cf/server.cf:
	    Strip off domain part of "user" variable only if getpwnam()
	    is not domain-aware.  As far as I can tell, this variable  
	    is unly used in 'login2uid' and 'fullname' functions.
